# handover-annotation

./: .gitignore  AGENTS.md  README.md  handover_recipe.py  hpc_probe_modules.sh  instructions.html  manuscript.docx  manuscript.html  manuscript.qmd  medgemma27b_a100_baseline_consensus_eval.pbs  medgemma27b_a100_experiments.pbs  medgemma27b_a100_test.pbs  proposal.md  pyproject.toml  pyrightconfig.json  python_venv_cluster_test.pbs  question_rationale_explorer.html  run_eval.py  run_eval_checklist.py  run_eval_sbar_span.py  run_eval_uncertain_binary_span.py  run_eval_uncertain_span.py  run_experiment_sbar_langextract.py  run_experiment_uncertain_langextract.py  run_test_sbar_consensus_prompt.py  run_test_span.py  run_test_uncertain.py  run_train_checklist.py  run_train_sbar_span.py  run_train_uncertain_binary_span.py  run_train_uncertain_span.py  start_prodigy.sh  styles.css
.devcontainer/: devcontainer.json
analysis/: analyze_checklist_eval.py  per_label_analysis.py  plot_checklist_eval_svg.py  plot_per_label.py  render_checklist_md_table.py
annotated_data/: create_consensus_dataset.py  db_20251205.jsonl  db_20260129.jsonl  reviewed_db_choice_20251203.jsonl  tokenize_db.py
checklist-consensus-results/: summary.json
compiled_programs/: checklist_consensus.json  checklist_gpt_5.2_user1.json  checklist_medgemma_consensus.json  checklist_medgemma_consensus_temp06.json  sbar_span_gpt5-2_consensus.json  sbar_span_gpt5-2_user1.json  sbar_span_gpt5-2_user2.json  sbar_span_gpt_nano_consensus.json  sbar_span_gpt_nano_consensus_minimal.json  uncertain_span_consensus.json  (+17 more)
(+320 files in other folders)
